Tables optimized to content

--- a/index.html
+++ b/index.html
@@ -79,17 +79,8 @@
 		box-shadow: 0 3px 25px 0 rgba(0, 0, 0, 0.15);
 		background-color: #ffffff;
 		float:left;
-	}
-	.container-short {
-		height: 220px;
-		margin-bottom:25px;
-	}
-	.container-medium {
-		height: 320px;
-	}
-	.container-long {
-		height: 830px;
-		margin-bottom:50px;
+		padding-bottom:25px;
+		margin-bottom:40px;
 	}
 
 	.top-links {
@@ -176,7 +167,7 @@
 			<h3>Leaderboard</h3>
 			<h3><a href="#">Enter new game</a></h3>
 		</div>
-		<div class="container container-long">
+		<div class="container">
 			<table>
 				<tr class="top-row">
 					<td><h4>Name</h4></td>
@@ -266,7 +257,7 @@
 		<div class="top-links">
 			<h3>Game details</h3>
 		</div>
-		<div class="container container-short">
+		<div class="container">
 			<table>
 				<tr class="top-row"><td class="team-name"><h4>Team Arthur</h4></td><td></td></tr>
 				<tr>
@@ -283,7 +274,7 @@
 				</tr>
 			</table>
 		</div>
-		<div class="container container-medium">
+		<div class="container">
 			<table>
 				<tr class="top-row"><td class="team-name"><h4>Team Mordred</h4></td><td></td></tr>
 				<tr>
