--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<style>
 
 	/* Intuit Fonts */
-	
+
 	@font-face {
 		font-family: "AvenirNextforINTUIT";
 		src: url("./AvenirNextforINTUIT-Regular.otf");
@@ -142,6 +142,8 @@
 
 
 </style>
+
+<title>Avalon Scoreboard</title>
 
 </head>
 
