--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
 	body {
 		width:1366px;
 		margin:auto;
-		padding:55px 0 0 200px;
+		padding:55px 0 0 5%;
+	}
+
+	@media (min-width:1400px) {
+		body {
+			padding:55px 0 0 200px;
+		}
 	}
 
 	h1 {
